# phantomx-driver

./: .gitignore  .gitmodules  LICENSE  README.md
phantom_control/: CMakeLists.txt  package.xml  phantom_control.xml  pincher_control.xml
phantom_control/config/: coppelia_rgb_depth_rviz.rviz  phantom_controllers.yaml  px100_controllers.yaml
phantom_control/description/: phantom.ros2_control.xacro  physical_phantom.ros2_control.xacro  px100.urdf.xacro
phantom_control/description/ros2_control/: px100.ros2_control.xacro
phantom_control/hardware/: phantom_pincher_system.cpp  topic_based_system.cpp
phantom_control/hardware/include/phantom_control/: phantom_pincher_system.hpp  topic_based_system.hpp
phantom_control/launch/: bringup_launch.py  physical_launch.py  px100_bringup_launch.py
phantom_control/matlab/: joint_trajectory_controller_test.mlx  vision_example.mlx  vision_identification.slx
phantom_control/rviz/: broadcaster_viz.rviz
phantom_coppelia/: CMakeLists.txt  package.xml
phantom_coppelia/launch/: bringup_launch.py
phantom_coppelia/scenes/: spheres.ttt
phantom_description/: CMakeLists.txt  package.xml
phantom_description/config/: a.rviz  rviz_px100.rviz  rviz_viz.rviz
phantom_description/launch/: viz_launch.py
phantom_description/urdf/: arm_hardware.xacro  pincher_arm.urdf  pincher_gripper.xacro  turtlebot_arm.urdf  turtlebot_arm.urdf.xacro  turtlebot_arm.xacro
phantom_description/urdf/px100/: px100.urdf.xacro
phantom_vision/: CMakeLists.txt  package.xml
phantom_vision/src/: ball_finder.cpp
